# sparc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  sparch.h.in
base/: ccan_json.c  ccan_json.h
base/kore/: accesslog.c  auth.c  bsd.c  buf.c  cli.c  config.c  connection.c  domain.c  http.c  http.h  jsonrpc.c  jsonrpc.h  keymgr.c  kore.c  kore.h  linux.c  mem.c  module.c  msg.c  net.c  pgsql.c  pgsql.h  pool.c  tasks.c  tasks.h  timer.c  utils.c  validator.c  websocket.c  worker.c
examples/: CMakeLists.txt  basic.cpp  crud.cpp  databases.cpp  hello.cpp  misc.cpp  sauth.cpp  serve.cpp
examples/assets/serve/www/: index.html
sparc/: common.h  sparc.h  util.cpp  util.h
sparc/detail/: admin.cpp  app.cpp  app.h  auth.cpp  auth.h  bgtimer.cpp  bgtimer.h  db.cpp  db.h  embed.cpp  json.cpp  json.h  request.cpp  request.h  response.cpp  response.h  router.cpp  router.h  session.cpp  session.h  static_file.cpp  static_file.h  uthash.h  websocket.cpp  websocket.h
test/: main.c  routes_test.h  routes_tests.cpp  routing_test.cpp  routing_test.h  sut.cpp  sut.h
